--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
 [tool.poetry]
+package-mode = false
 name = "bento-chat-assistant"
 version = "0.1.0"
 description = "FastAPI based Chatbot Starter Kit"
 authors = ["Your Name <your.email@example.com>"]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.13"
+python = ">=3.10,<3.13"
 fastapi = "^0.109.0"
 uvicorn = "^0.27.0"
 openai = "^1.0.0"
@@ -14,6 +15,11 @@ pydantic = "^2.0.0"
 pydantic-settings = "^2.0.0"
 pywebview = "^4.0.0"
 anthropic = "^0.18.1"
+chromadb = "^0.4.24"
+numpy = "1.24.4"
+python-multipart = "^0.0.9"
+pypdf = "^4.0.1"
+docx2txt = "^0.8"
 
 [tool.poetry.group.dev.dependencies]
 pyinstaller = "^6.0.0"
