fix: numpy version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ pydantic-settings = "^2.0.0"
 pywebview = "^4.0.0"
 anthropic = "^0.18.1"
 chromadb = "^0.4.24"
-numpy = "1.24.4"
+numpy = "^1.26.0"
 python-multipart = "^0.0.9"
 pypdf = "^4.0.1"
 docx2txt = "^0.8"
